--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.liu.androidtest"
+        applicationId "com.liu.activity"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -16,16 +17,34 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    //配置数据库,配置版本号即可,其他的只需要保持默认
+    greendao {
+        //数据库版本号
+        schemaVersion 1
+        //数据库dao所在包
+        daoPackage 'com.liu.dao'
+        //生成的数据库文件的目录
+        targetGenDir 'src/main/java'
+        //自动生成单元测试
+//    generateTests true
+        //生成的单元测试目录
+//    targetGenDirTests
+    }
 }
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestCompile('com.android.support:support-annotations:26.1.0') {
+    androidTestImplementation('com.android.support:support-annotations:26.1.0') {
         force = true
     }
 
