--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.liu.activity">
+    package="com.liu">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.liu.log.MyLogService" android:exported="false">
+        <service android:name=".log.MyLogService" android:exported="false">
             <intent-filter>
                 <action android:name="com.liu.log.MyLogService"/>
             </intent-filter>
@@ -33,7 +33,7 @@
 
 
         <!--属性依次为：全限定类名,用于匹配的URI,是否共享数据 -->
-        <provider android:name="com.liu.db.NameContentProvider"
+        <provider android:name=".db.NameContentProvider"
             android:authorities="com.jay.example.providers.name_provider"
             android:exported="true" />
     </application>
