--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
-apply plugin: 'org.royole.channel-apk'
+//apply plugin: 'org.royole.channel-apk'
 
-channel {
-    //当不指定channelFile时，默认读取根工程目录下的channel.txt获取渠道信息
-    channelFile new File(project.getRootDir(), 'channel.txt')
-    baseOutputDir new File(project.getRootDir(), "apk")
-    mSignatureMode 2
-}
+//channel {
+//    //当不指定channelFile时，默认读取根工程目录下的channel.txt获取渠道信息
+//    channelFile new File(project.getRootDir(), 'channel.txt')
+//    baseOutputDir new File(project.getRootDir(), "apk")
+//    mSignatureMode 2
+//}
 
 //android 变量，每个gradle文件中有个内建变量叫project,android 也是个变量，project.android与android{ xxx }等价
 //android 变量有多个成员变量，这里设置的都是成员变量的属性
