--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,16 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url uri('D:\\maven release\\1')
-        }
+//        maven {
+//           url uri('D:\\maven release\\1')
+//        }
         mavenLocal()
         mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
-        classpath 'org.royole:channel-apk-plugin:1.0.1'
+//        classpath 'org.royole:channel-apk-plugin:1.0.1'
 //        classpath 'org.hzl.gradle-plugin:pluginDemo:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
