--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.liu">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
@@ -25,15 +25,19 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".log.MyLogService" android:exported="false">
+        <service
+            android:name=".log.MyLogService"
+            android:exported="false"
+            android:process="com.liu.test">
             <intent-filter>
-                <action android:name="com.liu.log.MyLogService"/>
+                <action android:name="com.liu.log.MyLogService" />
             </intent-filter>
         </service>
 
 
         <!--属性依次为：全限定类名,用于匹配的URI,是否共享数据 -->
-        <provider android:name=".db.NameContentProvider"
+        <provider
+            android:name=".db.NameContentProvider"
             android:authorities="com.jay.example.providers.name_provider"
             android:exported="true" />
     </application>
